# AMRtime

./: .gitignore  .travis.yml  AMRtime.py  AUTHORS.rst  CMakeLists.txt  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  amrtime.py  amrtime_pipeline.py  notes.md  setup.py  test.sh  tox.ini
amrtime/: __init__.py  amrtime.py  cli.py  database.py  encoding.py  model.py  parsers.py  utils.py
cpp/: LICENSE
cpp/src/: CMakeLists.txt
docs/: conf.py  index.rst  installation.rst  usage.rst
include/: AMR_annotation.h  AMRtimeConfig.h.in  amrtime.h  generate_training.h
pipeline/: Snakefile  amrtime_pipeline.py  classifiers.py  dna2vec.py  make_CARD_canonical_metagenome_labels.py  parsers.py
pipeline/amrtime/: encoding.py  model.py  parsers.py  utils.py
pipeline/scripts/: dump_to_gene_family_fasta.py  find_overlaps_within_families.py
scripts/: dump_to_gene_family_fasta.py  entropy.R  get_longest.py  leven_dist.R
src/: AMR_annotation.cpp  CMakeLists.txt  Makefile  amrtime.cpp  filter.cpp  generate_training.cpp  generate_training.h  utilities.cpp
src/test/: CMakeLists.txt  test.sh  test_generate_training.cpp
src/test/test_data/: expected_metagenome.fna  test_1.fna  test_1.tsv  test_2.fna  test_2.tsv
src/test_data/: 1069623.3.fna  1069623.3.fna.gff3  1069624.3.fna  1069624.3.fna.gff3  1069625.3.fna  1069625.3.fna.gff3
test/: CMakeLists.txt  bedtool_intersection.sh  python_comparison.py  test.sh  test_AMRtime.py  test_generate_training.cpp
test/data/: amr.bed  bedtool.fq  bedtool_labels.tsv  expected_clean.fq  expected_clean_labels.tsv  expected_metagenome.fna  test.sam
